--- a/list.html
+++ b/list.html
@@ -84,6 +84,25 @@
     </div>
   </div>
   <!---->
+
+  <!-- <template v-if="walletAlert">
+  <div draggable="true" @drag="mouseDrag" @dragend="mouseDragend" :style="dialogStyle" class="g-dialog-wrapper">
+    <div class="modal-content">
+      <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title" id="myModalLabel">提示</h4>
+      </div>
+      <div class="modal-body">请先安装<a href="https://github.com/ChengOrangeJu/WebExtensionWallet"> webExtensionWallet</a>钱包</div>
+      <div class="modal-footer">
+          <button type="button" class="btn btn-default"  @click="myVisible=false" aria-hidden="true" data-dismiss="modal">关闭</button>
+      </div>
+    </div>
+    <div class="g-dialog-container">
+  
+    </div>
+  </div>
+  </template> -->
+
 	<script src="vue.js"></script>
 	<script src="vue-router.js"></script>
   <script type="text/javascript" src="./dist/nebulas.js"></script>
